HTML/css/style.css
html{
    width: 100%;
    height: 100%;
    font-family: Georgia !important;
    background: #d8f0f3 /*#b0e0e6*/;
}
body{
    background: #d8f0f3 /*#b0e0e6*/;
    font-family: Georgia !important;
    font-size:14pt;
    margin:auto;
    width:95%;

}
a{
    color: #30909c;
    font-weight: 600;
}
div#nav{
    margin: auto;
    width: 90%;
    text-align: center;
    padding: 5px;
    font-family: Rockwell, "Courier Bold", Courier, Georgia, Times, "Times New Roman", serif;
	font-size: 24px;
	font-style: normal;
	font-variant: normal;
	font-weight: 700;
	line-height: 26.4px;
}
.index_sub{
    font-size:12pt;
    margin:0%;
    margin-top:2%;
     font-family: Rockwell, "Courier Bold", Courier, Georgia, Times, "Times New Roman", serif;
	font-size: 18px;
	font-style: normal;
	font-variant: normal;
	font-weight: 400;
	line-height: 20.4px;
}
#content{
    text-align:center;
}

img{
    height: auto;
    width: auto;
    padding: 10px;
    max-width: 1100px;
    max-height: 1350px;
}
ul{
    list-style: none;
    font-size: 14pt;
}
manu_Image{
    margin: 20px;
    padding: 10px;
}
manu_Content{
    margin: 20px;
    padding: 10px;
}

.page-header{
    text-align: center;
    font-size: 45pt !important;
}
.pageNum{
    font-size:16pt;
}
.main{
    text-align: center;
    font-size: 25pt !important;
}
.minTitle{
    text-align: center;
    font-size: 20pt;
}
.sectionHead{
    font-size: 18pt;
    font-weight: 700;
}
.entryHead{
    font-size: 16pt;
}
hr.pageDivider{
    border-style: solid;
    border-color: #000000;
    border-width: 2px 0 0 0;
}
hr.sectionDivider{
    border-style: dashed;
    border-color: #000000;
    border-width: 1px 0 0 0;
}
.unclear{
    font-size: 12pt;
    color: red;
}
.strike{
    text-decoration: line-through;
}
.ditto{
    font-size: 12pt;
    font-style: italic;
}

/*Wheeler Journal*/
.smaller{
    font-size:11pt;
}
span.italics{
    font-style:italic;
}
.spelling{
    font-style:italic;
}
.footnote{
    border-style: dashed;
    border-color: #30909c;
    border-width: 1px;
}
.center-block {
  display: block !important;
  margin: auto !important;
}

